Misc code optimisations

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,7 +67,7 @@
     <string name="menu_caption_detail_selections">&#128736; Detail selecties</string>
     <string name="menu_caption_email">\u2709 Email this lemma</string>
     <string name="menu_caption_group_type">&#128218; Kies woordgroep of woordsoort</string>
-    <string name="menu_caption_import_database">&#9889; Importeer Database</string>
+    <string name="menu_caption_import_database">&#9889; Ververs Database</string>
     <string name="menu_caption_neurolingo">&#127760; Lookup - NeuroLingo</string>
     <string name="menu_caption_reset_score">\u24ff-\u24ff Reset Scores</string>
     <string name="menu_caption_reset_selects">&#128260; Wis alle selecties</string>
@@ -102,7 +102,7 @@
     <string name="threshold_post"> x goed.</string>
     <string name="threshold_pre">Geslaagd bij </string>
 
-    <string name="version_info">Last change: androidX conversion</string>
+    <string name="version_info">Last change: Verb Game</string>
 
     <string name="wordgroup">Groep</string>
 
@@ -110,5 +110,5 @@
     <string name="ask">Ask</string>
     <string name="reveal">Reveal</string>
     <string name="volgende">Volgende</string>
-    <string name="laat_zien">Laat zien</string>
+    <string name="laat_zien">Toon rijtje</string>
 </resources>
