--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools"
+        tools:ignore="Typos"
+        >
     <string name="activity_title_main">Lemma\'s</string>
     <string name="advanced">Gevorderd</string>
     <string name="again">Opnieuw</string>
     <string name="alphabetical">alfabetisch</string>
     <string name="app_name">Zorba</string>
-
     <string name="apply">aan/uit</string>
-
     <string name="author">Herman van Rongen</string>
-
     <string name="basis">Basis</string>
-
-    <string name="block_size_post">woorden.</string>
     <string name="block_size_pre">Blokken van</string>
+    <string name="block_size_post">woorden.</string>
 
     <!--   ▶⫴  two characters: triangle pipes   \u25b6\u2af4  -->
     <string name="btn_caption_next_block">\u25b6\u2af4</string>
@@ -23,15 +21,10 @@
     <string name="cancel">Cancel</string>
 
     <string name="caption_search">Zoek:</string>
-
     <string name="clear">Reset</string>
-
     <string name="contact_email">herman@driemondglas.nl</string>
-
     <string name="correct">Goed:</string>
-
     <string name="descending">ondersteboven</string>
-
     <string name="description">Vocaulary learner Greek - Dutch </string>
 
     <string name="emoji_back">\u279C</string>
@@ -41,47 +34,35 @@
     <string name="emoji_wrong">\u2717</string>
 
     <string name="error">Fout:</string>
-
     <string name="flag_dutch">vlag NL</string>
     <string name="flag_greek">vlag GR</string>
-
     <string name="hangman_meaning">Betekenis: %1$s</string>
-
     <string name="hide_jumpers">dan niet meer tonen</string>
-
     <string name="index">positie</string>
-
     <string name="initiaal">Initiaal:</string>
-
-    <string name="lemma_length_post">karakters.</string>
     <string name="lemma_length_pre">Lemma lengte</string>
-
+    <string name="lemma_length_post">karakters.</string>
     <string name="level">Niveau:</string>
 
     <string name="menu_caption_about">ⓘ Over Zorba…</string>
     <string name="menu_caption_detail_selections">&#128736; Detail selecties</string>
-    <string name="menu_caption_email">&#128239; Email this lemma</string>
+    <string name="menu_caption_email">📭 Email this lemma</string>
     <string name="menu_caption_group_type">&#128218; Kies woordgroep of woordsoort </string>
     <string name="menu_caption_import_database">&#128451; Vernieuw database</string>
     <string name="menu_caption_neurolingo">&#127760; Lookup - NeuroLingo</string>
-    <string name="menu_caption_reset_score">\u24ff-\u24ff Reset scores</string>
+    <string name="menu_caption_reset_score">🅾🅾 Reset scores</string>
     <string name="menu_caption_reset_hiscore">\u23f1 Reset high score</string>
     <string name="menu_caption_reset_selects">&#128465; Reset alle selecties</string>
     <string name="menu_caption_use_speech">&#128264; Gebruik spraak</string>
     <string name="menu_caption_wordreference">&#127760; Lookup - WordReference</string>
-    <string name="menu_caption_base_record">&#128179;View Base Record</string>
+    <string name="menu_caption_base_record">💽 View Base Record</string>
+    <string name="menu_caption_copy">📋 copy pure lemma</string>
 
     <string name="msg_blocksize_number">Vul positief getal in voor de blokgrootte.</string>
     <string name="msg_lemmalength_number">Vul positief getal in voor de woordlengte.</string>
     <string name="msg_threshold_number">Vul positief getal in voor de drempelwaarde.</string>
 
     <string name="nice_to_know">Ballast</string>
-
-    <string name="open_flashcards">open flashcards</string>
-
-    <string name="paperclip">paperclip</string>
-
-    <string name="play_hangman">Speel Galgje</string>
 
     <string name="question_mark">\?</string>
 
@@ -97,14 +78,12 @@
     <string name="btn_caption_pause">⏸</string>
     <string name="btn_caption_rewind">⏮</string>
     <string name="btn_caption_restart">🔄</string>
-
-
     <string name="standard">standaard</string>
 
-    <string name="threshold_post"> x goed.</string>
     <string name="threshold_pre">Geslaagd bij </string>
+    <string name="threshold_post"> x goed.</string>
 
-    <string name="version_info">Luisterlijst. Luisteren per blok</string>
+    <string name="version_info">Flash on device</string>
 
     <string name="wordgroup">Groep</string>
 
@@ -112,10 +91,16 @@
     <string name="ask">Ask</string>
     <string name="reveal">Reveal</string>
     <string name="word_group_type_subtitle">Selecteer woordsoort en/of woordgroep</string>
-    <string name="werkwoordjes_oefenen">Werkwoordjes oefenen</string>
-    <string name="luister_oefening">Luister oefening</string>
     <string name="positie">blok %1$d - lemma %2$d</string>
     <string name="thatsall">ThatsAll</string>
     <string name="pct100">100%</string>
     <string name="tempo">tempo</string>
+    <string name="menu_caption_flash">⚡ Flash locally</string>
+    <string name="flash">⚡</string>
+    <string name="caption_flashed">alleen flashed</string>
+    <string name="lbl_flash">Flash ⚡</string>
+    <string name="btn_cap_check_next">check…\n en door</string>
+    <string name="btn_cap_restart">oops…\nopnieuw</string>
+    <string name="btn_cap_prev">vorige</string>
+    <string name="btn_cap_ladder">rijtje</string>
 </resources>
